added current width and height to text on screen

--- a/pop_game_demo/index.html
+++ b/pop_game_demo/index.html
@@ -287,6 +287,8 @@
                 POP.Draw.text('Hit: ' + POP.score.hit, 20, 30, 14, '#fff');
                 POP.Draw.text('Escaped: ' + POP.score.escaped, 20, 50, 14, '#fff');
                 POP.Draw.text('Accuracy: ' + POP.score.accuracy + '%', 20, 70, 14, '#fff');
+                POP.Draw.text('Width: ' + POP.currentWidth, 140, 30, 14, '#fff');
+                POP.Draw.text('Height: ' + POP.currentHeight, 140, 50, 14, '#fff');
 
             },
 
