--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <a href="xtermTest">xtermTest</a>
     <p />
     <a href="pop_game_demo">pop_game_demo</a>
+    <p />
+    <a href="phaser3-template">phaser3-template</a>
 </body>
 
 </html>
