--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!doctype html>
+
 <html>
 
 <head>
     <meta charset="utf-8" />
+    <style>
+        .container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+        }
+    </style>
 </head>
 
 <body>
-    <a href="xtermTest">xtermTest</a>
-    <p />
-    <a href="pop_game_demo">pop_game_demo</a>
-    <p />
-    <a href="phaser3-template">phaser3-template</a>
+    <div class="container">
+        <a href="xtermTest">xtermTest</a>
+        <p />
+        <a href="pop_game_demo">pop_game_demo</a>
+        <p />
+        <a href="phaser3-template">phaser3-template</a>
+    </div>
 </body>
 
 </html>
