--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 
 <body>
     <div class="container">
-        <a href="xtermTest">xtermTest</a>
+        <a href="phaser3-project-template/dist/index.html">phaser3-project-template/dist/index.html</a>
         <p />
-        <a href="pop_game_demo">pop_game_demo</a>
+        <a href="phaser3-template/build/index.html">phaser3-template/build/index.html</a>
         <p />
-        <a href="phaser3-template">phaser3-template</a>
+        <a href="pop_game_demo/index.html">pop_game_demo/index.html</a>
+        <p />
+        <a href="xtermTest/index.html">xtermTest/index.html</a>
     </div>
 </body>
 
