--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <div class="container">
-        <a href="phaser3-project-template/dist/index.html">phaser3-project-template/dist/index.html</a>
+        <a href="phaser/phaser3-project-template/index.html">phaser3-project-template/index.html</a>
         <p />
-        <a href="phaser3-template/build/index.html">phaser3-template/build/index.html</a>
+        <a href="phaser/phaser3-template/index.html">phaser3-template/index.html</a>
         <p />
         <a href="pop_game_demo/index.html">pop_game_demo/index.html</a>
         <p />
