--- a/phaser/phaser3-template/index.html
+++ b/phaser/phaser3-template/index.html
@@ -58,5 +58,5 @@
 </head>
 <body>
     <canvas id="game"></canvas>
-</body>
+<script type="text/javascript" src="vendors~game.js"></script><script type="text/javascript" src="game.js"></script></body>
 </html>
