--- a/phaser/phaser3-template/index.html
+++ b/phaser/phaser3-template/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>mod6</title>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 
     <!-- android -->
     <meta name="mobile-web-app-capable" content="yes" />
@@ -21,10 +25,12 @@
             border: 0;
 
             -webkit-box-sizing: border-box;
-               -moz-box-sizing: border-box;
-                    box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
         }
-        html, body {
+
+        html,
+        body {
             overflow: hidden;
             outline: none;
 
@@ -39,24 +45,27 @@
             justify-content: center;
             align-items: center;
         }
+
         #game {
             /* No touch action */
             touch-action-delay: none;
-                  touch-action: none;
-              -ms-touch-action: none;
+            touch-action: none;
+            -ms-touch-action: none;
 
             /* No user select */
             -webkit-touch-callout: none;
-              -webkit-user-select: none;
-               -khtml-user-select: none;
-                 -moz-user-select: none;
-                  -ms-user-select: none;
-                      user-select: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
     </style>
 </head>
+
 <body>
     <canvas id="game"></canvas>
 <script type="text/javascript" src="vendors~game.js"></script><script type="text/javascript" src="game.js"></script></body>
+
 </html>
