--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
     <div class="container">
-        <a href="phaser/phaser3-template/index.html">
-            phaser/phaser3-demo-spaceship/index.html
+        <a href="phaser/phaser3-demo-spaceship/index.html">
+            phaser/phaser3-demo-spaceship/index.html (mod8)
         </a>
         <p />
         <a href="pop_game_demo/index.html">
