new project structure

--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
 
 <body>
     <div class="container">
-        <a href="phaser/phaser3-demo-spaceship/index.html">
-            phaser/phaser3-demo-spaceship/index.html (mod9)
+        <a href="phaser/spaceship">
+            phaser/spaceship
         </a>
         <p />
-        <a href="pop_game_demo/index.html">
-            pop_game_demo/index.html
+        <a href="phaser/orbiter">
+            phaser/orbiter
+        </a>
+        <p />
+        <a href="phaser/pointerevents">
+            phaser/pointerevents
+        </a>
+        <p />
+        <a href="pop_game_demo">
+            pop_game_demo
         </a>
         <p />
     </div>
