--- a/phaser/pointerevents/index.html
+++ b/phaser/pointerevents/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <title>mod9</title>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport"
@@ -62,10 +60,10 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
     </style>
+    <script src="bundle.js"></script>
 </head>
 
 <body>
-    <canvas id="game"></canvas>
-<script type="text/javascript" src="vendors~game.js"></script><script type="text/javascript" src="game.js"></script></body>
+</body>
 
 </html>
