--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
     <div class="container">
-        <a href="phaser/spaceship">
-            phaser/spaceship
+        <a href="phaser/lander">
+            phaser/lander
         </a>
         <p />
         <a href="phaser/orbiter">
@@ -30,8 +30,8 @@
             phaser/pointerevents
         </a>
         <p />
-        <a href="pop_game_demo">
-            pop_game_demo
+        <a href="phaser/spaceship">
+            phaser/spaceship
         </a>
         <p />
     </div>
