--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
 <body>
     <div class="container">
-        <a href="phaser/lander">
-            phaser/lander
+        <a href="phaser/lander/">
+            phaser/lander/
         </a>
         <p />
-        <a href="phaser/orbiter">
-            phaser/orbiter
+        <a href="phaser/orbiter/">
+            phaser/orbiter/
         </a>
         <p />
-        <a href="phaser/pointerevents">
-            phaser/pointerevents
+        <a href="phaser/pointerevents/">
+            phaser/pointerevents/
         </a>
         <p />
-        <a href="phaser/spaceship">
-            phaser/spaceship
+        <a href="phaser/spaceship/">
+            phaser/spaceship/
         </a>
         <p />
     </div>
