--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             phaser/pointerevents/
         </a>
         <p />
+        <a href="phaser/rocketenginetest/">
+            phaser/rocketenginetest/
+        </a>
+        <p />
         <a href="phaser/spaceship/">
             phaser/spaceship/
         </a>
