--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             phaser/rocketenginetest/
         </a>
         <p />
+        <a href="phaser/soundpad/">
+            phaser/soundpad/
+        </a>
+        <p />
         <a href="phaser/spaceship/">
             phaser/spaceship/
         </a>
