--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 <body>
     <div class="container">
+        <a href="phaser/gridrunner/">
+            phaser/gridrunner/
+        </a>
+        <p />
         <a href="phaser/lander/">
             phaser/lander/
         </a>
