--- a/index.html
+++ b/index.html
@@ -5,53 +5,46 @@
 <head>
     <meta charset="utf-8" />
     <style>
-        .container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            -moz-transform: translateX(-50%) translateY(-50%);
-            -webkit-transform: translateX(-50%) translateY(-50%);
-            transform: translateX(-50%) translateY(-50%);
-        }
+        .container {}
     </style>
 </head>
 
 <body>
     <div class="container">
         <a href="phaser/gridrunner/">
-            phaser/gridrunner/
+            gridrunner/
         </a>
         <p />
         <a href="phaser/lander/">
-            phaser/lander/
+            lander/
         </a>
         <p />
         <a href="phaser/orbiter/">
-            phaser/orbiter/
+            orbiter/
         </a>
         <p />
         <a href="phaser/pointerevents/">
-            phaser/pointerevents/
+            pointerevents/
         </a>
         <p />
         <a href="phaser/polygondrop/">
-            phaser/polygondrop/
+            polygondrop/
         </a>
         <p />
         <a href="phaser/rocketcar/">
-            phaser/rocketcar/
+            rocketcar/
         </a>
         <p />
         <a href="phaser/rocketenginetest/">
-            phaser/rocketenginetest/
+            rocketenginetest/
         </a>
         <p />
         <a href="phaser/soundpad/">
-            phaser/soundpad/
+            soundpad/
         </a>
         <p />
         <a href="phaser/spaceship/">
-            phaser/spaceship/
+            spaceship/
         </a>
         <p />
     </div>
