change to landing pg

--- a/index.html
+++ b/index.html
@@ -1,50 +1,67 @@
-<!doctype html>
-
-<html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <style>
-        .container {}
+    <title>phaser experiements</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style type="text/css">
+        body {
+            font-family: "lucida sans", verdana, arial, helvetica, sans-serif;
+            font-size: 100%;
+        }
+
+        .container {
+            min-height: 100%;
+            background-color: #DDD;
+            border-left: 2px solid #666;
+            border-right: 2px solid #666;
+            width: 676px;
+            margin: 0 auto;
+            padding: 10px;
+        }
+
+        * html .container {
+            height: 100%;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <a href="phaser/gridrunner/">
-            gridrunner/
+            gridrunner
         </a>
         <p />
         <a href="phaser/lander/">
-            lander/
+            lander
         </a>
         <p />
         <a href="phaser/orbiter/">
-            orbiter/
+            orbiter
         </a>
         <p />
         <a href="phaser/pointerevents/">
-            pointerevents/
+            pointerevents
         </a>
         <p />
         <a href="phaser/polygondrop/">
-            polygondrop/
+            polygondrop
         </a>
         <p />
         <a href="phaser/rocketcar/">
-            rocketcar/
+            rocketcar
         </a>
         <p />
         <a href="phaser/rocketenginetest/">
-            rocketenginetest/
+            rocketenginetest
         </a>
         <p />
         <a href="phaser/soundpad/">
-            soundpad/
+            soundpad
         </a>
         <p />
         <a href="phaser/spaceship/">
-            spaceship/
+            spaceship
         </a>
         <p />
     </div>
