--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <style type="text/css">
         body {
             font-family: "lucida sans", verdana, arial, helvetica, sans-serif;
-            font-size: 100%;
+            font-size: 32px;
         }
 
         .container {
-            min-height: 100%;
             background-color: #DDD;
             border-left: 2px solid #666;
             border-right: 2px solid #666;
             width: 676px;
-            margin: 0 auto;
             padding: 10px;
         }
 
