--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <style type="text/css">
         body {
             font-family: "lucida sans", verdana, arial, helvetica, sans-serif;
-            font-size: 32px;
+            font-size: 60px;
         }
 
         .container {
+            position: relative;
+            top: 100px;
+            left: 100px;
             background-color: #DDD;
             border-left: 2px solid #666;
             border-right: 2px solid #666;
-            width: 676px;
+            width: 600px;
             padding: 10px;
         }
 
