hauler and lander

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 <body>
     <div class="container">
-        <a href="phaser/gridrunner/">
-            gridrunner
+        <a href="phaser/hauler/">
+            hauler
         </a>
         <p />
         <a href="phaser/lander/">
