--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
 <body>
     <div class="container">
+        <a href="phaser/draw/">
+            draw
+        </a>
+        <p />
         <a href="phaser/hauler/">
             hauler
         </a>
