vortex and vortex2

--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
 
 <body>
     <div class="container">
-        <a href="phaser/draw/">
-            draw
-        </a>
-        <p />
         <a href="phaser/hauler/">
             hauler
         </a>
@@ -67,6 +63,14 @@
         <p />
         <a href="phaser/spaceship/">
             spaceship
+        </a>
+        <p />
+        <a href="phaser/vortex/">
+            vortex
+        </a>
+        <p />
+        <a href="phaser/vortex2/">
+            vortex2
         </a>
         <p />
     </div>
