--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             lander
         </a>
         <p />
+        <a href="phaser/lander-util/">
+            lander-util
+        </a>
+        <p />
         <a href="phaser/orbiter/">
             orbiter
         </a>
